--- a/src/templates/static/landing.html
+++ b/src/templates/static/landing.html
@@ -13,7 +13,7 @@
   {% if request.user.is_authenticated %}
     Logged in as user #{{ request.user.pk }}. <a href="{% url "account:logout" %}">Logout</a>
   {% else %}
-    <a href="{% url "account:login" %}">Login</a>
+    <a href="{% url "account:login" %}">Login</a> or <a href="{% url "registration:view" %}">register</a>
   {% endif %}
 </p>
 
