Should be page-header.
Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/src/templates/passwords/reset_password_done.html
+++ b/src/templates/passwords/reset_password_done.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<h1 class="page-title">Password has been successfully reset</h1>
+<h1 class="page-header">Password has been successfully reset</h1>
 
 <a href="{% url "static:landing" %}">Click here to return to the homepage</a>
 
