--- a/src/templates/profile/view.html
+++ b/src/templates/profile/view.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 
-<h1 class="page-title">{{ user.profile.display_name }}'s profile</h1>
+<h1 class="page-header">{{ user.profile.display_name }}'s profile</h1>
 
 {% endblock %}
