--- a/src/templates/registration/confirm.html
+++ b/src/templates/registration/confirm.html
@@ -6,7 +6,7 @@
 
 <section id="registration_confirm">
 
-  <h1 class="page-title">Registration confirmed</h1>
+  <h1 class="page-header">Registration confirmed</h1>
 
   <p>
     Your account has been confirmed.
