--- a/src/templates/registration/done.html
+++ b/src/templates/registration/done.html
@@ -4,7 +4,7 @@
 
 <section id="registration_done">
 
-  <h1 class="page-title">Registration successful</h1>
+  <h1 class="page-header">Registration successful</h1>
 
   <p>
     Please check your inbox to confirm your email address.
