--- a/src/templates/profile/edit.html
+++ b/src/templates/profile/edit.html
@@ -4,4 +4,14 @@
 
 <h1 class="page-header">Edit profile</h1>
 
+<form method="POST" action="">
+  {% csrf_token %}
+
+  {{ form }}
+
+  <p>
+    <button type="submit" class="btn btn-primary">Save</button>
+  </p>
+</form>
+
 {% endblock %}
