Add biography field.
Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/src/templates/profile/view.html
+++ b/src/templates/profile/view.html
@@ -4,4 +4,10 @@
 
 <h1 class="page-header">{{ user.profile.display_name }}'s profile</h1>
 
+{% if user.profile.biography %}
+<blockquote>
+  {{ user.profile.biography|linebreaksbr }}
+</blockquote>
+{% endif %}
+
 {% endblock %}
