--- a/src/templates/base/base.html
+++ b/src/templates/base/base.html
@@ -1,3 +1,5 @@
+{% load url from future %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -18,6 +20,17 @@
   </head>
 
   <body class="{% block body_class %}{% endblock %}">
+
+    <div class="navbar navbar-inverse">
+      <div class="navbar-inner">
+        <a class="brand" href="{% url "static:landing" %}">Librement</a>
+        <div class="nav-collapse">
+          <ul class="nav">
+            <li><a href="{% url "static:landing" %}">Home</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
 
     <div class="container">
       {% block content %}{% endblock %}
