--- a/src/templates/base/base.html
+++ b/src/templates/base/base.html
@@ -36,5 +36,9 @@
       {% block content %}{% endblock %}
     </div>
 
+    {% block javascript %}
+    <script type="text/javascript" src="{% static "js/jquery.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/bootstrap-dropdown.js" %}"></script>
+    {% endblock %}
   </body>
 </html>
