--- a/src/templates/base/base.html
+++ b/src/templates/base/base.html
@@ -28,6 +28,23 @@
           <ul class="nav">
             <li><a href="{% url "static:landing" %}">Home</a></li>
           </ul>
+
+          <ul class="nav pull-right">
+          {% if request.user.is_authenticated %}
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Logged in as {{ request.user.profile.display_name }} <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="{% url "profile:view" request.user.username %}">My profile</a></li>
+                <li class="divider"></li>
+                <li><a href="{% url "account:logout" %}">Logout</a></li>
+              </ul>
+            </li>
+          {% else %}
+            <li><a href="{% url "registration:view" %}">Register</a></li>
+            <li><a href="{% url "account:login" %}">Login</a></li>
+          {% endif %}
+          </ul>
+
         </div>
       </div>
     </div>
