Move this to a dashboard app.
Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/src/templates/base/base.html
+++ b/src/templates/base/base.html
@@ -23,10 +23,10 @@
 
     <div class="navbar navbar-inverse">
       <div class="navbar-inner">
-        <a class="brand" href="{% url "static:landing" %}">Librement</a>
+        <a class="brand" href="{% url "dashboard:view" %}">Librement</a>
         <div class="nav-collapse">
           <ul class="nav">
-            <li><a href="{% url "static:landing" %}">Home</a></li>
+            <li><a href="{% url "dashboard:view" %}">Home</a></li>
           </ul>
 
           <ul class="nav pull-right">
