--- a/src/templates/passwords/reset_password_done.html
+++ b/src/templates/passwords/reset_password_done.html
@@ -6,6 +6,6 @@
 
 <h1 class="page-header">Password has been successfully reset</h1>
 
-<a href="{% url "static:landing" %}">Click here to return to the homepage</a>
+<a href="{% url "dashboard:view" %}">Click here to return to the homepage</a>
 
 {% endblock %}
