--- a/src/templates/registration/confirm.html
+++ b/src/templates/registration/confirm.html
@@ -13,7 +13,7 @@
   </p>
 
   <p>
-    <a href="{% url "static:landing" %}">Click here to return to the homepage</a>
+    <a href="{% url "dashboard:view" %}">Click here to return to the homepage</a>
   </p>
 
 </section>
