Supporting edit your url.
Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/src/templates/profile/edit/url.html
+++ b/src/templates/profile/edit/url.html
@@ -1,6 +1,6 @@
 {% extends "profile/edit/base.html" %}
 
-{% block profile_edit_basic %}active{% endblock %}
+{% block profile_edit_url %}active{% endblock %}
 
 {% block edit_profile %}
 
