--- a/src/templates/profile/edit/base.html
+++ b/src/templates/profile/edit/base.html
@@ -7,9 +7,8 @@
 <h1 class="page-header">Edit profile</h1>
 
 <ul class="nav nav-pills">
-  <li class="active">
-    <a href="{% url "profile:edit" %}">Basic information</a>
-  </li>
+  <li class="{% block profile_edit_basic %}{% endblock %}"><a href="{% url "profile:edit" %}">Basic information</a></li>
+  <li class="{% block profile_edit_url %}{% endblock %}"><a href="{% url "profile:edit-url" %}">URL</a></li>
 </ul>
 
 {% block edit_profile %}{% endblock %}
