--- a/src/templates/base/base.html
+++ b/src/templates/base/base.html
@@ -50,6 +50,12 @@
     </div>
 
     <div class="container">
+      {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}">
+          {{ message }}
+        </div>
+      {% endfor %}
+
       {% block content %}{% endblock %}
     </div>
 
