--- a/src/templates/profile/view.html
+++ b/src/templates/profile/view.html
@@ -32,7 +32,7 @@
 
     <div class="row">
       <div class="span2">
-        (FIXME photo here)
+        <img src="{{ user.profile.picture.url }}" height="200" width="200">
       </div>
       <div class="span6">
         {% if user.profile.biography %}
