--- a/src/templates/profile/view.html
+++ b/src/templates/profile/view.html
@@ -32,7 +32,11 @@
 
     <div class="row">
       <div class="span2">
-        <img src="{{ user.profile.picture.url }}" height="200" width="200">
+        {% if user.profile.picture.exists %}
+          <img src="{{ user.profile.picture.thumbnail.url }}" height="150" width="150">
+        {% else %}
+          <img src="{% static "img/profile_picture_placeholder.png" %}">
+        {% endif %}
       </div>
       <div class="span6">
         {% if user.profile.biography %}
