Add support for getting an RSS feed.
Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/src/templates/base/base.html
+++ b/src/templates/base/base.html
@@ -62,6 +62,7 @@
     {% block javascript %}
     <script type="text/javascript" src="{% static "js/jquery.js" %}"></script>
     <script type="text/javascript" src="{% static "js/bootstrap-dropdown.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/librement.js" %}"></script>
     {% endblock %}
   </body>
 </html>
