Make the account type be one line.
Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/src/templates/registration/view.html
+++ b/src/templates/registration/view.html
@@ -14,7 +14,7 @@
         <label class="control-label" for="{{ form.account_type.id_for_label }}">Account type</label>
         <div class="controls">
           {% for enum,display in form.fields.account_type.choices %}
-          <label class="radio">
+          <label class="radio inline">
             <input type="radio" name="{{ form.account_type.html_name }}" value="{{ enum.slug }}" {% if form.account_type.value == enum %}checked="checked"{% endif %}>
             {{ display }}
           </label>
