Rename to body_classes.
Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/src/templates/base/base.html
+++ b/src/templates/base/base.html
@@ -19,7 +19,7 @@
     {% endblock %}
   </head>
 
-  <body class="{% block body_class %}{% endblock %}">
+  <body class="{% block body_classes %}{% endblock %}">
 
     <div class="navbar navbar-inverse">
       <div class="navbar-inner">
