--- a/src/templates/profile/view.html
+++ b/src/templates/profile/view.html
@@ -2,7 +2,7 @@
 
 {% load url from future %}
 
-{% block body_class %}f_profile{% endblock %}
+{% block body_classes %}f_profile{% endblock %}
 
 {% block content %}
 
