--- a/src/templates/profile/edit/base.html
+++ b/src/templates/profile/edit/base.html
@@ -8,6 +8,7 @@
 
 <ul class="nav nav-pills">
   <li class="{% block profile_edit_basic %}{% endblock %}"><a href="{% url "profile:edit" %}">Basic information</a></li>
+  <li class="{% block profile_edit_emails %}{% endblock %}"><a href="{% url "profile:emails:view" %}">Email addresses</a></li>
   <li class="{% block profile_edit_url %}{% endblock %}"><a href="{% url "profile:edit-url" %}">URL</a></li>
   <li class="{% block profile_edit_links %}{% endblock %}"><a href="{% url "profile:links:view" %}">Links</a></li>
   <li class="{% block profile_edit_picture %}{% endblock %}"><a href="{% url "profile:edit-picture" %}">Picture</a></li>
